# rca-reasoning-coding-agents

./: .gitignore  README.md  pyproject.toml
config_yaml/: local.yaml  swebench.yaml
data/: construct.py
data/long_horizon/: train.parquet
rca/: grpo.py  inference.py  main_grpo.py  train.py
rca/agents/: summarizer_agent.py
rca/datasets/: preprocess_data.py
rca/environments/: __init__.py  apptainer_env.py
rca/generators/: mini_swe_generator.py
rca/rewards/: reward_fn.py
rca/utils/: __init__.py  construct.py  mini_swe.py  parsing.py
scripts/: run_mini_swe_4B.sh  train_grpo.sh
tests/: test_eval.py
