[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rca"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "emac"
version = "0.0.1"
authors = [
    {name="Lintang Sutawika", email="lsutawik@andrew.cmu.edu"}
]
description = "Expectation-Maximization for Agentic Coders"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
license = { "text" = "MIT" }


[tool.setuptools.packages.find]
include = ["rca/*"]

