[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rca"]

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "rca"
version = "0.0.1"
authors = [
    {name="Lintang Sutawika", email="lsutawik@andrew.cmu.edu"}
]
description = "Expectation-Maximization for Agentic Coders"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
license = { "text" = "MIT" }
dependencies = [
    "jsonlines>=4.0.0",
    "loguru>=0.7.3",
    "mini-swe-agent>=1.12.0",
    "skyrl-train>=0.1.0",
    "swebench>=4.1.0",
    "swesmith>=0.0.7",
    "torch>=2.8.0",
    "vllm>=0.10.2",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]

[tool.setuptools.packages.find]
include = ["rca/*"]

